# fwupd

./: .pre-commit-config.yaml  meson.build
contrib/ci/: build_windows.sh
libfwupdplugin/: fu-device.c  fu-plugin-private.h  fu-plugin-vfuncs.h  fu-plugin.c  fwupdplugin.map
plugins/colorhug/: fu-colorhug-device.c
plugins/dell-dock/: fu-dell-dock-common.c  fu-dell-dock-common.h  fu-dell-dock-usb-usb4.c  fu-plugin-dell-dock.c
plugins/dfu/: fu-dfu-device.c  fu-dfu-target-avr.c  fu-dfu-target-stm.c
plugins/ebitdo/: fu-ebitdo-device.c
plugins/elantp/: fu-elantp-hid-device.c  fu-elantp-i2c-device.c
plugins/fastboot/: fu-fastboot-device.c
plugins/goodix-moc/: fu-goodixmoc-device.c
plugins/hailuck/: fu-hailuck-bl-device.c
plugins/intel-spi/: fu-intel-spi-device.c
plugins/logitech-bulkcontroller/: bulk_controller.c  bulk_controller.h  device_common.h  fu-plugin-logitech-bulkcontroller.c  logitech-bulkcontroller.quirk  meson.build  proto_manager.c
plugins/logitech-bulkcontroller/proto/: meson.build  ota_manifest.proto
plugins/modem-manager/: fu-mbim-qdu-updater.c  fu-mm-device.c
plugins/vli/: fu-vli-usbhub-device.c
src/: fu-engine.c  fu-engine.h  fu-install-task.c  fu-install-task.h  fu-self-test.c  fu-tool.c
